--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@hookform/resolvers": "^3.4.2",
     "@mui/material": "^5.15.17",
     "@mui/material-nextjs": "^5.15.11",
+    "@prisma/client": "5.14.0",
     "@types/express": "^4.17.21",
     "@types/json-server": "^0.14.7",
     "axios": "^1.7.1",
     "clsx": "^2.1.0",
     "next": "14.2.3",
+    "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
