--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.15.17",
     "@mui/material-nextjs": "^5.15.11",
     "@prisma/client": "5.14.0",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.43.4",
     "@types/express": "^4.17.21",
     "@types/json-server": "^0.14.7",
     "axios": "^1.7.1",
