--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
@@ -36,5 +37,7 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+#prisma
+./prisma
 
-.env
+
