--- a/package.json
+++ b/package.json
@@ -7,22 +7,25 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "server": "json-server --watch src/data/data.json --port 3001"
+    "server": "json-server --watch src/data/data.json --port 3001",
+    "dev-all": "concurrently \"yarn run dev\" \"yarn run server\""
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.4.2",
+    "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.17",
     "@mui/material-nextjs": "^5.15.11",
-    "@prisma/client": "5.14.0",
+    "@prisma/client": "^5.14.0",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
     "@types/express": "^4.17.21",
     "@types/json-server": "^0.14.7",
     "axios": "^1.7.1",
     "clsx": "^2.1.0",
+    "concurrently": "^8.2.2",
     "next": "14.2.3",
     "prisma": "^5.14.0",
     "react": "^18",
