--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "server": "json-server --watch src/data/data.json --port 3001",
-    "dev-all": "concurrently \"yarn run dev\" \"yarn run server\""
+    "server": "json-server --watch src/data/data.json --port 3001"
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
