--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "yup": "^1.4.0"
   },
